--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/quokka-ecommerce/quokka-dao-nodejs#readme",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "mongoose": "^4.3.6"
   }
 }
